Tue Jun 09 18:30:17 CEST 2015
	Add new functions MHD_create_response_from_fd64() and
	MHD_create_response_from_fd_at_offset64(). -EG

Thu Jun  4 13:37:05 CEST 2015
	Fixing memory leak in digest authentication. -AW

Wed Jun 03 21:23:47 CEST 2015
	Add deprecation compiler messages for deprecated functions 
	and macros. -EG

Fri May 29 12:23:01 CEST 2015
	Fixing digest authentication when used in combination
	with escaped characters in URLs. -CG/AW

Wed May 13 11:49:09 CEST 2015
	Releasing libmicrohttpd 0.9.42. -CG

Wed May 13 11:33:59 CEST 2015
	Fix off-by-one in MHD_start_daemon_va() error handling logic
	when initialization of threads for thread pool fails for some
	reason. -CG/JC

Thu May  7 17:05:46 CEST 2015
	Add support for poll() in W32. -EG

Wed May  6 18:07:38 CEST 2015
	Fix #3784: actually implement MHD_CONNECTION_INFO_SOCKET_CONTEXT. -asherkin

Thu Apr 30 00:03::49 CEST 2015
	Releasing libmicrohttpd 0.9.41. -CG

Thu Apr 30 00:02:33 CEST 2015
	Fix issue where resumed connections would not continue
	unless other requests are active in certain
	event-loop modes. Thanks to Mike Castillo for reporting. -CG

Wed Apr 15 03:16:18 CEST 2015
	Fixing issue #3753 (testcase issue). -CG

Wed Apr 15 00:30:34 CEST 2015
	Fix looping issue when using MHD_USE_POLL_INTERNALLY
	and a client times out. -LB

Sun Apr 12 21:48:50 CEST 2015
	Fix looping issue when combining MHD_USE_EPOLL_LINUX_ONLY
	with HTTPS and slow clients. -CG

Fri Apr 10 22:02:27 CEST 2015
	Fix logic to add "Connection: Close" that was broken in 0.9.38
	when adding MHD_RF_HTTP_VERSION_1_0_ONLY. -CG

Fri Apr 10 00:38:40 CEST 2015
	Ensure fast termination in MHD_USE_THREAD_PER_CONNECTION
	mode on W32 by using signal pipe. -CG

Thu Apr  9 09:01:15 CEST 2015
	Fixing issue with undrained signal pipe when using
	MHD_USE_SELECT_INTERNALLY and MHD_USE_POLL in combination
	with MHD_resume_connection(), causing 100% CPU usage. -DD

Tue Apr  7 00:12:36 CEST 2015
	Releasing libmicrohttpd 0.9.40. -CG
